mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cart-mongo
  namespace: clahanstore
spec:
  serviceName: cart-mongo
  replicas: 1
  selector:
    matchLabels:
      app: cart-mongo
  template:
    metadata:
      labels:
        app: cart-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
