service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: clahanstore
spec:
  selector:
    app: cart-service
  ports:
    - port: 3006
      targetPort: 3006
  type: ClusterIP
