httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cart-route
  namespace: clahanstore
spec:
  parentRefs:
    - name: clahanstore-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cart
      backendRefs:
        - name: cart-service
          port: 3006
